--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-welecome to Grove for GraphXR,  Please access https://graphxr.kineviz.com directly.
+Welcome to Grove for GraphXR,  please access https://graphxr.kineviz.com directly.
