--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-Welcome to Grove for GraphXR,  please access https://graphxr.kineviz.com directly.
+Welcome to Grove for GraphXR, please access <a href="https://graphxr.kineviz.com">https://graphxr.kineviz.com</a>
+directly.
